adapting to DU changes in may